--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-modal-video": "^1.2.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-slick": "^0.28.1",
     "react-tabs": "^3.2.3",
     "slick-carousel": "^1.8.1",
